WIP Botones Intereses
Añadidos chips y desplegable

--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
@@ -1,9 +1,13 @@
 .activitiesGrid {
-    width: 65%;
+    width: 100%;
 }
 
 .activitiesButton{
     display: flex;
     width: 100%;
+}
+
+.activitiesChip{
+
 }
 
