--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -7,7 +7,7 @@
         <mat-tab label="{{ 'PROFILE_TAB' | oTranslate }}">
             <o-form #form attr="profile_detail" service="users" entity="myUser" fxLayout="column" show-header="yes"
                 header-actions="U" #oDetailForm keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes">
-                <o-column title="PROFILE_DATA" layout-align="start stretch" fxFlex="80">
+                <o-column title="PROFILE_DATA" layout-align="start stretch" fxFlex="80" icon="account_circle">
                     <o-image attr="avatar" label="AVATAR" fxFlex="80" width="350px"
                         empty-image="assets/images/no-image.png" sql-type="OTHERS"></o-image>
                     <o-text-input attr="name" label="NAME" fxFlex="80" required="yes" max-length="20"></o-text-input>
@@ -17,33 +17,42 @@
                     <o-textarea-input attr="short_desc" label="DESCRIPTION" fxFlex="80"
                         max-length="250"></o-textarea-input>
                 </o-column>
+                <o-column title="ACTIVITIES" layout-align="start stretch" fxFlex="80" icon="pool">
+                    <mat-chip-list>
+                        <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient" [disabled]="false" color="primary">
+                          {{ activity }}
+                        </mat-chip>
+                      </mat-chip-list>
+                    <o-column-collapsible title="ACTSELECT" layout-align="start stretch" fxFlex="80">
+                        <o-grid class="activitiesGrid" #activitiesB attr="activitiesB" service="activities"
+                            entity="activity" keys="id_activity" columns="activity_name" orderable="true"
+                            show-page-size="false" quick-filter="false" cols="6" sortable-columns="activity_name"
+                            gutter-size="5px" detail-mode="none" (onDataLoaded)="onLoad()" pagination-controls="false"
+                            controls="false" grid-item-height="60">
+                            <o-grid-item *ngFor="let item of activitiesB.dataArray">
+                                <div fxLayout="column" fxLayoutAlign="space-evenly center">
 
-                <o-grid class="activitiesGrid" #activitiesB attr="activitiesB" service="activities" entity="activity"
-                    keys="id_activity" columns="activity_name" orderable="true" show-page-size="false" quick-filter="false" cols="6"
-                    sortable-columns="activity_name" gutter-size="5px" detail-mode="none" (onDataLoaded)="onLoad()"
-                    pagination-controls="false" controls="false" grid-item-height="60">
-                    <o-grid-item *ngFor="let item of activitiesB.dataArray">
-                        <div fxLayout="column" fxLayoutAlign="space-evenly center">
+                                    <o-button class="activitiesButton"
+                                        *ngIf="arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
+                                        label="{{ item.activity_name }}" layout-padding color="primary"
+                                        (onClick)="removeActivityFn(item.activity_name)"></o-button>
+                                    <o-button class="activitiesButton"
+                                        *ngIf="!arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
+                                        label="{{ item.activity_name }}" layout-padding color="accent"
+                                        (onClick)="addActivityFn(item.activity_name)"></o-button>
 
-                            <o-button class="activitiesButton"
-                                *ngIf="arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
-                                label="{{ item.activity_name }}" layout-padding color="primary"
-                                (onClick)="removeActivityFn(item.activity_name)"></o-button>
-                            <o-button class="activitiesButton"
-                                *ngIf="!arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
-                                label="{{ item.activity_name }}" layout-padding color="accent"
-                                (onClick)="addActivityFn(item.activity_name)"></o-button>
+                                </div>
 
+                            </o-grid-item>
+                        </o-grid>
+                        <div fxLayout="column" fxLayoutAlign="space-evenly center" fxFlex="100">
+                            <o-button type="RAISED" label="SAVE" layout-padding color="accent"
+                                (onClick)="saveActivitiesInDataBase()"></o-button>
                         </div>
+                    </o-column-collapsible>
+                </o-column>
 
-                    </o-grid-item>
-                </o-grid>
-                <div fxLayout="column" fxLayoutAlign="space-evenly center" fxFlex="65">
-                    <o-button type="STROKED" label="Guardar" layout-padding color="accent"
-                        (onClick)="saveActivitiesInDataBase()"></o-button>
-                </div>
-
-                <o-column title="REGISTER_DATA" layout-align="start stretch" fxFlex="80">
+                <o-column title="REGISTER_DATA" layout-align="start stretch" fxFlex="80" icon="assignment">
                     <o-text-input attr="user_" label="USER" fxFlex="80" enabled="no"></o-text-input>
                     <o-row class="row-pass">
                         <o-password-input attr="password" fxFlex="80" required="yes" label="PASSWORD"
@@ -92,17 +101,17 @@
             </o-form>
         </mat-tab>
 
-              <!-- Pestaña para habilitar servicios de las anfitrionas -->
-              <mat-tab label="{{'RESERVATION_TAB'| oTranslate }}">
-                <div fxFill fxLayout="column" fxLayoutAlign="start">
-                    <o-table #formReservation attr="reservation" service="reservation" entity="reservation"  keys="id_reservation"
-                        columns="id_reservation;id_client_traveler;name_traveler;id_client_host;name_host;status_name;message;id_status;
+        <!-- Pestaña para habilitar servicios de las anfitrionas -->
+        <mat-tab label="{{'RESERVATION_TAB'| oTranslate }}">
+            <div fxFill fxLayout="column" fxLayoutAlign="start">
+                <o-table #formReservation attr="reservation" service="reservation" entity="reservation"
+                    keys="id_reservation" columns="id_reservation;id_client_traveler;name_traveler;id_client_host;name_host;status_name;message;id_status;
                         surname_traveler;email_traveler;surname_host;email_host;phonenumber_host"
-                        visible-columns="id_reservation;id_client_traveler;name_traveler;id_client_host;name_host;status_name;message"  query-rows="10"
-                        >
-                    </o-table>
-                  </div>
-            </mat-tab>
+                    visible-columns="id_reservation;id_client_traveler;name_traveler;id_client_host;name_host;status_name;message"
+                    query-rows="10">
+                </o-table>
+            </div>
+        </mat-tab>
 
         <!-- Pestaña para habilitar servicios de las anfitrionas -->
         <!-- <mat-tab label="HOUSES">
