WIP Botones Intereses
Se seleccionan y guardan en la BD

--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.html
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.html
@@ -23,6 +23,7 @@
                 <div class="short_desc">
                     <span>{{ list.short_desc }}</span>
                 </div>
+                <p>{{ arrayActivitiesClient }}</p>
             </o-column>
         </o-grid-item>
     </div>
