Reservation con Dialog

--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
@@ -29,7 +29,7 @@
           </div>
         </mat-tab>
       </mat-tab-group>
-      <button mat-raised-button color="primary" (click)="reservationFn()">{{ 'REGISTER NOW' | oTranslate }}</button>
+      <button mat-raised-button color="primary" (click)="openReservation()">{{ 'REGISTER NOW' | oTranslate }}</button>
     </o-form>
     <div class="tape tape-left">
       <img src="../../../assets/images/tape.png" alt="">
