--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
@@ -1,4 +1,11 @@
+
+<!--     ////   WIP composición gráfica  ////     -->
+
 <div class="container">
+  <div class="title">
+    <p class="hostName">{{nameInput.getValue()}} {{surnameInput.getValue()}}</p>
+    <p class="town">{{townNameInput.getValue()}}</p>
+  </div>
   <div class="box">
     <o-form #form service="users" entity="client" keys="id_client" editable-detail="true" show-header="no"
       show-header-navigation="no" layout-direction="column" (onDataLoaded)="onLoad()">
@@ -9,15 +16,16 @@
               <o-image attr="avatar" label="AVATAR" fxFlex="100" empty-image="assets/images/no-image.png"
                 sql-type="OTHERS" show-controls="false" read-only="yes" height="100%"></o-image>  
           </o-column>
-          <o-column title="PROFILE_DATA" fxFlex="60" fxFlex.md="100" class="vertical-margin-10">
+          <o-column fxFlex="60" fxFlex.md="100" class="vertical-margin-10">
             <o-text-input attr="name" label="NAME" fxFlex="100" class="form-field" read-only="yes"
-              label-visible="false"></o-text-input>
+              label-visible="false" #nameInput oHidden></o-text-input>
             <o-text-input attr="surname" label="SURNAME" fxFlex="100" class="form-field" read-only="yes"
-              label-visible="false"></o-text-input>
+              label-visible="false" #surnameInput oHidden></o-text-input>
             <o-text-input #town attr="town_name" label="TOWN" fxFlex="100" class="form-field" read-only="yes"
-              label-visible="false"></o-text-input>
+              label-visible="false" #townNameInput oHidden></o-text-input>
             <o-textarea-input attr="short_desc" label="SHORT_DESC" fxFlex="100" class="form-field" read-only="yes"
-              label-visible="false"></o-textarea-input>
+              label-visible="false" #shortDescInput oHidden></o-textarea-input>
+              <p class="shortDesc">{{shortDescInput.getValue()}}</p>
           </o-column>
         </div>
       </o-column>
@@ -34,13 +42,44 @@
           {{ activity }}
         </mat-chip>
       </mat-chip-list>
-      <button mat-raised-button color="primary" (click)="openReservation()">{{ 'REGISTER NOW' | oTranslate }}</button>
+      <button mat-raised-button color="accent" fxFlex="40" (click)="openReservation()">{{ 'CONTACT' | oTranslate }} {{ nameInput.getValue() }}</button>
     </o-form>
-    <div class="tape tape-left">
+    <!-- <div class="tape tape-left">
       <img src="../../../assets/images/tape.png" alt="">
     </div>
     <div class="tape tape-right">
       <img src="../../../assets/images/tape2.png" alt="">
-    </div>
+    </div> -->
   </div>
 </div>
+
+
+<!--
+   <o-grid #grid columns="user_;id_client;name;surname;short_desc;avatar;activity_name" quick-filter-columns="name;surname;activity_name"
+        service="users" entity="host" keys="id" parent-keys="id_town" [cols]="3" show-page-size="false"
+        page-size-options="4;8;16" grid-item-height="3:4" refresh-button="false" pagination-controls="false"
+        gutter-size="20px" [ngStyle]="{'height':'600px'}" (onClick)="goToHostDetail($event)" (onDataLoaded)="onLoad()">
+
+        <div class="container">
+        <o-grid-item class="hostCard" *ngFor="let list of grid.dataArray">
+            <o-column class="container-item">
+                <div>
+                    <o-image class="image1" attr="image1" data="{{ list.avatar }}" read-only="true"
+                        show-controls="false">
+                    </o-image>
+                </div>
+                <div class="name-surname">
+                    <h2>{{ list.name + ' ' + list.surname }}</h2>
+                </div>
+                <div class="short_desc">
+                    <span>{{ list.short_desc }}</span>
+                </div>
+                 <mat-chip-list>
+                    <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient" [disabled]="false" color="primary">
+                      {{ activity }}
+                    </mat-chip>
+                  </mat-chip-list>
+                  <p>{{ arrayActivitiesClient }}</p>
+              <p>Hola</p> 
+            </o-column>
+-->
