--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.html
@@ -1,2 +1,5 @@
-<p>travelers-reservation works!</p>
-<p>{{data.id_client_host}}</p>
+<div class="dialog">
+<o-textarea-input attr="message" label="{{ 'MESSAGE' | oTranslate }}" fxFlex="80" max-length="250"></o-textarea-input>
+<o-button class="send" type="RAISED" label="SEND" layout-padding color="accent" (onClick)="saveMessageInDataBase()"></o-button>
+<p oHidden>{{data.id_client_host}}</p>
+</div>
