Chips en grid de anfitrionas y busqueda

--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.css
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.css
@@ -77,3 +77,9 @@ o-grid {
     display: -webkit-box;
     -webkit-box-orient: vertical;
 }
+
+.activitiesChip {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
