--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.html
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.html
@@ -4,8 +4,33 @@
         oHidden></o-text-input>
 
     <h1 class="town-title">{{ custom_name }}</h1>
+
+    <o-column-collapsible title="{{ 'FILTERS_HOSTS' | oTranslate }}" appearance="legacy" expanded="no"
+        icon="filter_list" class="collapsible">
+        <div class="filter_style" fxLayout="column" fxLayoutGap="14px">
+            <div fxLayout="row wrap" fxLayoutGap="32px">
+                <o-text-input attr="name" read-only="no" fxFlex="calc(25% - 32px)"></o-text-input>
+                <o-text-input attr="surname" read-only="no" fxFlex="calc(25% - 32px)"></o-text-input>
+                <o-combo #type attr="activity_name" service="activities" entity="activity"
+                    columns="id_activity;activity_name" value-column="activity_name" keys="id_activity"
+                    visible-columns="activity_name" fxFlex="calc(25% - 32px)"></o-combo>
+
+                <o-button attr="clear" [oFilterBuilderClear]="filterBuilder" type="STROKED" label="Clear"
+                    layout-padding>
+                </o-button>
+                <o-button attr="filter" [oFilterBuilderQuery]="filterBuilder" type="STROKED" label="Filter"
+                    layout-padding color="accent">
+                </o-button>
+                <o-filter-builder-menu [oFilterBuilder]="filterBuilder" show-filter-option="no"
+                    show-clear-filter-option="no" layout-padding></o-filter-builder-menu>
+            </div>
+        </div>
+        <o-filter-builder #filterBuilder attr="thefilter" filters="name;surname;activity_name"
+            [target]="grid"></o-filter-builder>
+    </o-column-collapsible>
+
     <o-grid #grid columns="user_;id_client;name;surname;short_desc;avatar;activities"
-        quick-filter-columns="name;surname;activities" service="users" entity="host" keys="id_client"
+        quick-filter="no" service="users" entity="host" keys="id_client"
         parent-keys="id_town" [cols]="3" show-page-size="false" page-size-options="4;8;16" grid-item-height="3:4"
         refresh-button="false" pagination-controls="false" gutter-size="20px" [ngStyle]="{'height':'600px'}"
         (onClick)="goToHostDetail($event)">
@@ -25,12 +50,11 @@
                         <span>{{ list.short_desc }}</span>
                     </div>
                     <mat-chip-list>
-                        <mat-chip class="activitiesChip" *ngFor="let activity of splitActivities(list.activities)" [disabled]="false"
-                            color="primary">
+                        <mat-chip class="activitiesChip" *ngFor="let activity of splitActivities(list.activities)"
+                            [disabled]="false" color="primary">
                             {{ activity }}
                         </mat-chip>
                     </mat-chip-list>
-                    <!-- <p>{{ splitActivities(list.activities) }}</p> -->
                 </o-column>
 
             </o-grid-item>
