Actividades en busqueda y perfil funcionando

--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.css
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.css
@@ -79,7 +79,6 @@ o-grid {
 }
 
 .activitiesChip {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
 }
