--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.html
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.html
@@ -14,15 +14,17 @@
                 <o-combo #type attr="activity_name" service="activities" entity="activity"
                     columns="id_activity;activity_name" value-column="activity_name" keys="id_activity"
                     visible-columns="activity_name" fxFlex="calc(25% - 32px)" sort="ASC" searchable="true"></o-combo>
-
-                <o-button attr="clear" [oFilterBuilderClear]="filterBuilder" type="STROKED" label="Clear"
-                    layout-padding>
-                </o-button>
-                <o-button attr="filter" [oFilterBuilderQuery]="filterBuilder" type="STROKED" label="Filter"
-                    layout-padding color="accent">
-                </o-button>
+                
+                <div class="buttons-container">
+                    <o-button attr="clear" [oFilterBuilderClear]="filterBuilder" type="STROKED" label="Clear"
+                        layout-padding>
+                    </o-button>
+                    <o-button attr="filter" [oFilterBuilderQuery]="filterBuilder" type="STROKED" label="Filter"
+                        layout-padding color="accent">
+                    </o-button>
                 <o-filter-builder-menu [oFilterBuilder]="filterBuilder" show-filter-option="no"
                     show-clear-filter-option="no" layout-padding></o-filter-builder-menu>
+                </div>
             </div>
         </div>
         <o-filter-builder #filterBuilder attr="thefilter" filters="name;surname;activity_name"
