--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.css
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.css
@@ -50,15 +50,39 @@
     position: absolute;
 }
 
-
-
-mat-chip-list {
-    margin-bottom: 40px;
-
-    .activitiesChip {
-        color: rgb(90, 29, 232);
-    }
+.mat-chip {
+    font-size: 1em; 
+    height: 0px; /* Altura fija para todas las chips */
+    line-height: 5px; /* Alineación vertical del texto dentro de la chip */
+    padding: 0 10px; /* Padding horizontal para mantener el contenido centrado */
+    margin: 0;
+    pointer-events: none; /* Desactiva el efecto hover */
+    background-color: rgb(210, 190, 250);
 }
+
+
+mat-chip:hover {
+background-color: inherit; 
+}
+
+.mat-chip-list {
+display: flex;
+justify-content: center;
+align-items: center; 
+list-style: none;
+padding: 0;
+margin: 0 0 20px; /* Añadir margen inferior */
+width: 100%; 
+box-sizing: border-box;
+}
+
+.button-contact {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 20px;
+}
+
 
 /* .tape-left {
     top: -50px;
