--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -3,10 +3,10 @@
     <mat-tab-group fxFill (selectedTabChange)="yourFn($event)">
 
         <!-- Pestaña de para el perfil por defecto-->
-
         <mat-tab label="{{ 'PROFILE_TAB' | oTranslate }}">
             <o-form #form attr="profile_detail" service="users" entity="myUser" fxLayout="column" show-header="yes"
                 header-actions="U" #oDetailForm keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes">
+                
                 <o-column title="PROFILE_DATA" layout-align="start stretch" fxFlex="80" icon="account_circle">
                     <o-image attr="avatar" label="AVATAR" fxFlex="80" width="350px"
                         empty-image="assets/images/no-image.png" sql-type="OTHERS"></o-image>
@@ -18,20 +18,23 @@
                         max-length="250"></o-textarea-input>
                 </o-column>
                 <o-column title="ACTIVITIES" layout-align="start stretch" fxFlex="80" icon="pool">
-                    <mat-chip-list>
+                    
+                    <mat-chip-list fxFlex="80">
                         <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient" [disabled]="false" color="primary">
                           {{ activity }}
                         </mat-chip>
                       </mat-chip-list>
+
                     <o-column-collapsible title="ACTSELECT" layout-align="start stretch" fxFlex="80">
                         <o-grid class="activitiesGrid" #activitiesB attr="activitiesB" service="activities"
                             entity="activity" keys="id_activity" columns="activity_name;id_activity" orderable="true"
-                            show-page-size="false" quick-filter="false" cols="6" sortable-columns="activity_name"
+                            show-page-size="no" quick-filter="false" cols="6" sortable-columns="activity_name"
                             gutter-size="5px" detail-mode="none" (onDataLoaded)="onLoad()" pagination-controls="false"
                             controls="false" grid-item-height="60">
-                            <o-grid-item *ngFor="let item of activitiesB.dataArray">
+                            
+                            <o-grid-item *ngFor="let item of activitiesB.dataArray" show-page-size="false">
+                                
                                 <div fxLayout="column" fxLayoutAlign="space-evenly center">
-
                                     <o-button class="activitiesButton"
                                         *ngIf="arrayActivitiesClient.includes(item.activity_name)" type="STROKED"
                                         label="{{ item.activity_name }}" layout-padding color="primary"
